--- a/TinderApp/package.json
+++ b/TinderApp/package.json
@@ -24,6 +24,7 @@
     "@material-ui/icons": "^2.0.3",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "mdi-material-ui": "^5.3.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
