--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tinder-app",
+  "name": "redux-simple-starter",
   "version": "1.0.0",
-  "description": "Simple tinder app built with React & Redux and Babel support",
+  "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
   "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
@@ -20,8 +20,8 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "@material-ui/core": "^1.5.1",
-    "@material-ui/icons": "^2.0.3",
+    "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^3.0.1",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "mdi-material-ui": "^5.3.0",
