--- a/YoutubeApp/package.json
+++ b/YoutubeApp/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "build": "webpack -p"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "@material-ui/icons": "^2.0.3",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "mdi-material-ui": "^5.4.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
